--- a/src/app/cadastro/cadastro.html
+++ b/src/app/cadastro/cadastro.html
@@ -66,6 +66,33 @@
             </div>
           </div>
 
+          <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+            <div fxLayout="column" fxFlex="400px">
+              <mat-form-field class="full-width">
+                <mat-label> UF</mat-label>
+                <mat-select [(value)]="cliente.uf" 
+                (selectionChange)="carregarMunicipios($event)">
+                  <mat-option *ngFor="let uf of estados" [value]="uf.sigla">
+                    {{ uf.sigla }} - {{ uf.nome }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+            <div fxLayout="column" fxFlex="400px">
+              <mat-form-field class="full-width">
+                <mat-label> Município</mat-label>
+                <mat-select [(value)]="cliente.municipio">
+                  <mat-option *ngFor="let m of minicipios" [value]="m.nome">
+                    {{ m.nome }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+
           <mat-card-actions>
             @if (!atualizando) {
               <button mat-flat-button color="primary" type="submit">
