Melhorias no CRUD e integração com BrasilAPI

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,17 @@
-<mat-toolbar color="primary">
-  <span>Cadastro de Clientes</span>
+<mat-toolbar color="warn">
+  <span>Crud Angular Material</span>
   <span class="spacer"></span>
+  <a routerLink="/inicio">
+    <mat-icon fontIcon="home"></mat-icon>
+    Inicio
+  </a>
   <a routerLink="/cadastro">
     <mat-icon fontIcon="feed"></mat-icon>
     Formulário
   </a>
   <a routerLink="/consulta">
     <mat-icon fontIcon="search"></mat-icon>
-    Consulta</a>
+    Consulta</a
+  >
 </mat-toolbar>
 <router-outlet></router-outlet>
-
-
-
