--- a/src/app/cadastro/cadastro.html
+++ b/src/app/cadastro/cadastro.html
@@ -2,7 +2,7 @@
   <div fxLayout="column" fxFlex="900px">
     <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvar()">
       <mat-card>
-        <mat-card-title> Formulário de Cadastro de Clientes </mat-card-title>
+        <mat-card-title class="text-center mt-40"> Formulário de Cadastro de Clientes </mat-card-title>
         <mat-card-content class="mt-20">
           <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
             <div fxLayout="column" fxFlex="800px">
