--- a/src/app/consulta/consulta.html
+++ b/src/app/consulta/consulta.html
@@ -36,7 +36,7 @@
   <div fxLayout="column" fxFlex="1000px">
     <mat-card appearance="outlined">
       <mat-card-header>
-        <mat-card-title> Resultado </mat-card-title>
+        <mat-card-title> Clientes Cadastrados </mat-card-title>
       </mat-card-header>
     </mat-card>
     <mat-card-content>
