--- a/src/app/cadastro/cadastro.scss
+++ b/src/app/cadastro/cadastro.scss
@@ -1,5 +1,12 @@
+
 html, body {
-  height: 100%;
+  height: 100vw;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto 30px auto; // centraliza e dá espaçamento
+  padding: 24px;
+  background: #0b0f1a;
+  border-radius: 12px;
 }
 body {
     margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -13,6 +20,10 @@ body {
     margin-bottom: 40px;
 }
 
+.mt-40 {
+    margin-top: 40px;                                     
+}
+
 .mt-60 {
     margin-top: 60px;                                     
 }
@@ -24,6 +35,16 @@ body {
 .ml-5 {
     margin-left: 5px;
 }
+.ml-50 {
+    margin-left: 50px;
+}
 .pink {
     background-color: #e91e63;
+}
+.text-center {
+    text-align: center;
+}
+
+.bg-white {
+    background-color: white;
 }
